tests/error/06_function_return.py
# Incorrect return type in function declaration
# Type Checker Error: Encountered different type: t1=Type<int> t2=Type<bool>
def func() -> int:
	return False
